force-app/main/default/objects/aecm__Pain_Point_Solutions__c/aecm__Pain_Point_Solutions__c.object-meta.xml
<CustomObject>
    <description>Link to create a many-to-many relationship between Pain Points and Solutions</description>
    <label>Pain Point Solution</label>
    <nameField>
        <displayFormat>PPS-{MM}{YY}{000000}</displayFormat>
        <label>Pain Point Solution System Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Pain Points Solutions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>