force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Link to create a many-to-many relationship between this Pain Point and an additional Capability. Create Pain Point from a capability to automatically create an association.</inlineHelpText>
    <label>Capability</label>
    <referenceTo>aecm__Capability__c</referenceTo>
    <relationshipLabel>Pain Point Solutions</relationshipLabel>
    <relationshipName>Pain_Points_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>