force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Area__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Area__c</fullName>
    <formula>aecm__Capability__r.aecm__Capability_Area__r.Name</formula>
    <inlineHelpText>read only field that displays the capabilities related capability area</inlineHelpText>
    <label>Capability Area</label>
    <type>Text</type>
</CustomField>