force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Improvement_Priority__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Improvement_Priority__c</fullName>
    <formula>TEXT(aecm__Capability__r.aecm__Improvement_Priority__c )</formula>
    <inlineHelpText>Read only field that represents the current state of the related capability field &quot;Improvement Priority&quot;</inlineHelpText>
    <label>Capability Improvement Priority</label>
    <type>Text</type>
</CustomField>