force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Maturity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Maturity__c</fullName>
    <formula>TEXT(aecm__Capability__r.aecm__Maturity__c )</formula>
    <inlineHelpText>Read only field that represents the current state of the related capability field &quot;Maturity&quot;</inlineHelpText>
    <label>Capability Maturity</label>
    <type>Text</type>
</CustomField>