force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Pain_Point__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Pain_Point__c</fullName>
    <label>Capability Pain Point</label>
    <referenceTo>aecm__Capability_Pain_Point__c</referenceTo>
    <relationshipLabel>Pain Point Solutions</relationshipLabel>
    <relationshipName>Pain_Points_Solutions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>