force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Proactivity_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Proactivity_Index__c</fullName>
    <formula>TEXT( aecm__Capability__r.aecm__Proactivity_Index__c)</formula>
    <inlineHelpText>Read only field that represents the current state of the related capability field &quot;Proactivity Index&quot;</inlineHelpText>
    <label>Capability Proactivity Index</label>
    <type>Text</type>
</CustomField>