force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Capability_Strategic_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Capability_Strategic_Index__c</fullName>
    <formula>TEXT( aecm__Capability__r.aecm__Strategic_Index__c )</formula>
    <inlineHelpText>Read only field that represents the current state of the related capability field &quot;Strategic Index&quot;</inlineHelpText>
    <label>Capability Strategic Index</label>
    <type>Text</type>
</CustomField>