force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Change_in_Maturity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Change_in_Maturity__c</fullName>
    <formula>aecm__Forecasted_Overall_Score__c - aecm__Capability_Overall_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Change in Maturity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>