force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Effect__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Effect__c</fullName>
    <formula>IF(
   aecm__Forecasted_Overall_Score__c  &gt; 0,  IMAGE(&quot;https://tempest-dev-ed--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Gif&amp;versionId=0686g000001oTqN&amp;operationContext=CHATTER&amp;contentId=05T6g00000ClxTt&quot;, &quot;CHANGE&quot;, 100,120) , NULL
)</formula>
    <label>Forecasted Effect</label>
    <type>Text</type>
</CustomField>