force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Improvement_Priority__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Improvement_Priority__c</fullName>
    <label>Forecasted Improvement Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
            </value>
            <value>
                <fullName>Acknowledged Low</fullName>
            </value>
            <value>
                <fullName>Moderate Importance</fullName>
            </value>
            <value>
                <fullName>High Importance</fullName>
            </value>
            <value>
                <fullName>Critical for Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>