force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Improvement_Priority_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Improvement_Priority_Score__c</fullName>
    <formula>CASE( aecm__Forecasted_Improvement_Priority__c , &quot;Not Acknowledged&quot;, 1, &quot;Acknowledged Low&quot;,2, &quot;Moderate Importance&quot;,3,&quot;High Importance&quot;,4,&quot;Critical for Success&quot;,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Improvement Priority Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>