force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Maturity__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Maturity__c</fullName>
    <label>Forecasted Maturity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Undefined</fullName>
            </value>
            <value>
                <fullName>Defined</fullName>
            </value>
            <value>
                <fullName>Optimizing</fullName>
            </value>
            <value>
                <fullName>Leading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>