force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Maturity_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Maturity_Score__c</fullName>
    <formula>CASE( aecm__Forecasted_Maturity__c , &quot;Undefined&quot;, 0.5, &quot;Defined&quot;, 1,&quot;Optimizing&quot;,1.5,&quot;Leading&quot;,2,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Maturity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>