force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Overall_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Overall_Score__c</fullName>
    <formula>(( aecm__Forecasted_Maturity_Score__c  * 2.5 )+ ( aecm__Forecasted_Improvement_Priority_Score__c  * 1.75 )+(  aecm__Forecasted_Proactivity_Index_Score__c  * 2 )+(  aecm__Forecasted_Strategic_Index_Score__c * 3 ))/4</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Overall Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>