force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Proactivity_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Proactivity_Index__c</fullName>
    <label>Forecasted Proactivity Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
            </value>
            <value>
                <fullName>Reactive</fullName>
            </value>
            <value>
                <fullName>Occasionally Proactive</fullName>
            </value>
            <value>
                <fullName>Situationally Proactive</fullName>
            </value>
            <value>
                <fullName>Intentionally Proactive</fullName>
            </value>
            <value>
                <fullName>Occassionally Proactive</fullName>
                <isActive>false</isActive>
                <label>Occassionally Proactive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>