force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Proactivity_Index_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Proactivity_Index_Score__c</fullName>
    <formula>CASE( aecm__Forecasted_Proactivity_Index__c , &quot;Not Acknowledged&quot;, 1, &quot;Reactive&quot;, 2,&quot;Occasionally Proactive&quot;,3,&quot;Situationally Proactive&quot;,4,&quot;Intentionally Proactive&quot;,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Proactivity Index Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>