force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Strategic_Index__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Strategic_Index__c</fullName>
    <label>Forecasted Strategic Index</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Acknowledged</fullName>
            </value>
            <value>
                <fullName>Tactical</fullName>
            </value>
            <value>
                <fullName>Occasionally Strategic</fullName>
            </value>
            <value>
                <fullName>Situationally Strategic</fullName>
            </value>
            <value>
                <fullName>Intentionally Strategic</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>