force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Forecasted_Strategic_Index_Score__c.field-meta.xml
<CustomField>
    <fullName>aecm__Forecasted_Strategic_Index_Score__c</fullName>
    <formula>CASE( aecm__Forecasted_Strategic_Index__c , &quot;Not Acknowledged&quot;, 1, &quot;Tactical&quot;, 2,&quot;Occasionally Strategic&quot;,3,&quot;Situationally Strategic&quot;,4,&quot;Intentionally Strategic&quot;,5,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Forecasted Strategic Index Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>