force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Functional_Area__c.field-meta.xml
<CustomField>
    <fullName>aecm__Functional_Area__c</fullName>
    <formula>aecm__Capability__r.aecm__Capability_Area__r.aecm__Capability_Domain__r.aecm__Function__r.Name</formula>
    <inlineHelpText>read only field that displays the functional area associated with the capability</inlineHelpText>
    <label>Functional Unit</label>
    <type>Text</type>
</CustomField>