force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Pain_Point_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Pain_Point_Name__c</fullName>
    <formula>aecm__Capability_Pain_Point__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pain Point Name</label>
    <type>Text</type>
</CustomField>