force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Pain_Point_Solution_Title__c.field-meta.xml
<CustomField>
    <fullName>aecm__Pain_Point_Solution_Title__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id , aecm__Solution_Design_Name__c + &apos; - &apos; + aecm__Capability_Pain_Point__r.Name, &apos;_self&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pain Point Solution Name</label>
    <type>Text</type>
</CustomField>