force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Program_Project__c.field-meta.xml
<CustomField>
    <fullName>aecm__Program_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Project</label>
    <referenceTo>aecm__Program_Project__c</referenceTo>
    <relationshipLabel>Pain Point Solutions</relationshipLabel>
    <relationshipName>Related_Pain_Points_Solutions</relationshipName>
    <type>Lookup</type>
</CustomField>