force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__QA_Complete__c.field-meta.xml
<CustomField>
    <fullName>aecm__QA_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QA Complete</label>
    <type>Checkbox</type>
</CustomField>