force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Solution_Design__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Design__c</fullName>
    <inlineHelpText>Link to create a many-to-many relationship between this Pain Points and a Solution Design. Create another record to associate this Pain Point with multiple solutions.</inlineHelpText>
    <label>Solution Design</label>
    <referenceTo>aecm__Solution_Design__c</referenceTo>
    <relationshipLabel>Pain Point Solutions</relationshipLabel>
    <relationshipName>Pain_Points_Solutions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>