force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Solution_Design_Name__c.field-meta.xml
<CustomField>
    <fullName>aecm__Solution_Design_Name__c</fullName>
    <formula>aecm__Solution_Design__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solution Design Name</label>
    <type>Text</type>
</CustomField>