force-app/main/default/objects/aecm__Pain_Point_Solutions__c/fields/aecm__Status__c.field-meta.xml
<CustomField>
    <fullName>aecm__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planning</fullName>
                <default>true</default>
                <label>Planning</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Project Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>