force-app/main/default/objects/aecm__Pain_Point_Solutions__c/validationRules/aecm__Complete_update_score_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>aecm__Complete_update_score_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(aecm__Solution_Design__r.aecm__Status__c ,&apos;Completed-Update Scores&apos;)</errorConditionFormula>
    <errorMessage>Pain Point Solution can not be added or updated for Solution Design marked as Completed-Update Scores</errorMessage>
</ValidationRule>