force-app/main/default/objects/aecm__Pain_Point_Solutions__c/validationRules/aecm__Completed_Status_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>aecm__Completed_Status_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISPICKVAL(aecm__Solution_Design__r.aecm__Status__c ,&apos;Complete&apos;),
	OR(
		NOT( aecm__QA_Complete__c ),
	 	NOT(ISPICKVAL( aecm__Status__c,&apos;Project Completed&apos;)),
	 	IF(
	 		ISBLANK( aecm__Program_Project__c ),
	 	    false,
	  		NOT(ISPICKVAL( aecm__Program_Project__r.aecm__Status__c ,&apos;Complete&apos;) )
	 	)
		
	)
	)</errorConditionFormula>
    <errorMessage>To solve a Capability Pain Point for a completed Solution Design, the Solution Design must be related to a completed Program Project.</errorMessage>
</ValidationRule>