force-app/main/default/objects/aecm__Pain_Point_Solutions__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>aecm__Pain_Point_Solution_Title__c</columns>
    <columns>aecm__Forecasted_Maturity__c</columns>
    <columns>aecm__Forecasted_Improvement_Priority__c</columns>
    <columns>aecm__Forecasted_Proactivity_Index__c</columns>
    <columns>aecm__Forecasted_Strategic_Index__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>